theme: Fix dramblr readability.

--- a/files/assets/css/dramblr.css
+++ b/files/assets/css/dramblr.css
@@ -16,7 +16,7 @@
 }
 
 .container.transparent, .card {
-	background-color: var(--gray-800);
+	background-color: var(--gray-800) !important;
 }
 
 .navbar-light {
